<resources>
    <string name="app_name">5 x 5 훈련 프로그램</string>
    <string name="button1">본인 정보 입력</string>
    <string name="button2">운동 시작</string>
    <string name="button3">3대 중량 등급표</string>
    <string name="user_data">사용자 정보</string>
    <string name="exercise">운동</string>
    <string name="own_record">본인 기록(kg)</string>
    <string name="set_num">횟수</string>
    <string name="sq">스쿼트</string>
    <string name="bp">벤치 프레스</string>
    <string name="dl">데드 리프트</string>
    <string name="pr">펜들레이 로우</string>
    <string name="ohp">오버헤드 프레스</string>
    <string name="chin">턱걸이</string>
    <string name="ur">업라이트 로우</string>
    <string name="min_plate">체육관에서 가장 작은 원판의 무게(kg)</string>
    <string name="save">저장</string>
    <string name="back">뒤로</string>
    <string name="load">불러오기</string>
    <string name="tooEarly">5주차 이상부터 불러오기가 가능합니다</string>
    <string name="expected_big3">3대 기록</string>
    <string name="not_enough_info">정보가 부족합니다</string>
    <string name="save_success">저장 완료</string>
    <string name="mon">월요일</string>
    <string name="wed">수요일</string>
    <string name="fri">금요일</string>
    <string name="next_week">다음 주</string>
    <string name="prior_week">이전 주</string>
    <string name="week">주차</string>
    <string name="weight">중량</string>
    <string name="main_set5">5(메인)</string>
    <string name="main_set3">3(메인)</string>
    <string name="max_reps">최대한</string>
    <string name="body_building">자극 위주</string>
    <string name="complete">완수</string>
    <string name="check_to_next_week">다음 주차로 넘어가시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="restart_week1">이제 정보를 수정해서 새롭게 시작하세요</string>
    <string name="ex1RM">예상 1RM</string>
    <string name="user_weight">사용자 몸무게</string>
    <string name="weight_input_error">몸무게를 정확히 입력해 주세요</string>
    <string name="rank">등급</string>
    <string name="rank_info">등급별 설명</string>
    <string name="read_for_fun">재미로 보세요^^</string>
    <string name="newbie">완전초보</string>
    <string name="newbie_info">훈련받지 않은  건강한 개인이 정확하게 수행하였을 때 예상되는 정도. 몸을 많이 움직이지 않고 앉아서 일하는 사람이 삶을 사는데 필요한 근력의 최소한의 정도를 나타낸다.</string>
    <string name="beginner">초보자</string>
    <string name="beginner_info">보통 규칙적으로 3~9개월 훈련받은 사람. 이 근력 레벨은 격렬한 레크리에이션 활동에 요구되는 정도이다.</string>
    <string name="intermediate">중급자</string>
    <string name="intermediate_info">보통 1~2년 이상 규칙적인 운동을 한 사람. 이 레벨은 특화된 운동의 어느 정도 또는 높은 수준의 레크리에이션 활동을 할 수 있는 정도이다</string>
    <string name="advanced">고급자</string>
    <string name="advanced_info">높은 수준의 경쟁적인 운동선수를 최종적인 목표로 다년간의 운동을 한 사람.</string>
    <string name="elite">엘리트</string>
    <string name="elite_info">스트렝스 스포츠에 특화된 사람. 웨이트 트레이닝을 하는 1%이하의 사람이 이 레벨에 도달함.</string>

</resources>
