<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:onClick="SetInfo"
            android:text="@string/button1">
        </Button>
        <Button
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:onClick="StartTraining"
            android:text="@string/button2">
        </Button>
        <Button
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:onClick="ShowRanking"
            android:text="@string/button3">
        </Button>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>